--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
   cache=T,
   collapse=T,
   comment="#>",
-  dpi=200,
+  dpi=300,
   out.width="100%"
 )
 ```
@@ -121,7 +121,8 @@ draw_fretboard <- function(tones12,fw2=.1) {
           axis.ticks = element_blank(),
           panel.background = element_blank(),
           plot.margin=unit(c(0,0,0,0), "cm"),
-          panel.spacing=unit(c(0,0,0,0), "cm"))
+          panel.spacing=unit(c(0,0,0,0), "cm"),
+          panel.border = element_blank())
 }
 
 draw_fretboard(tones12_5ths_and_4ths)
@@ -172,7 +173,8 @@ draw_naturals <- function(tones12,fw2=.1) {
           axis.ticks = element_blank(),
           panel.background = element_blank(),
           plot.margin=unit(c(0,0,0,0), "cm"),
-          panel.spacing=unit(c(0,0,0,0), "cm"))
+          panel.spacing=unit(c(0,0,0,0), "cm"),
+          panel.border = element_blank())
 }
 ```
 
